# ika

./: README.md  package-lock.json
client/: package-lock.json  package.json  tailwind.config.js  vite.config.js
client/.vercel/: project.json
client/src/: App.jsx  index.css  main.jsx
client/src/components/: Nav.jsx  Sidebar.jsx
client/src/components/hero/: bottles.jsx
client/src/components/mapbox/: Mapbox.jsx
client/src/context/: context.jsx
client/src/pages/: error.jsx  layout.jsx  page.jsx
client/src/pages/simulator/: page.jsx
client/src/utils/: geoJsonProcessor.js  getPopulation.js  roundToNearestK.js
data/mismanaged_waste/: total.csv
data/plastic_waste_generation/: total.csv
data/waste_trade/per_capita/: exports.csv  imports.csv
data/waste_trade/total/: net_exports.csv
server/: Cargo.toml
server/data/: Country_Population_Data.csv  countries-continents.csv
server/data/mismanaged_waste/: per_capita.csv  total.csv
server/data/plastic_emitted_to_ocean/: total.csv
server/data/plastic_waste_generation/: per_capita.csv  total_country.csv
server/data/probability_of_ocean_pollution/: .~lock.total.csv#  total.csv
server/data/waste_trade/per_capita/: imports.csv  net_exports.csv
server/data/waste_trade/total/: exports.csv  imports.csv
server/src/: init.rs  main.rs
