[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data"
path = "src/bin/data.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
async-std = "1.12.0"
polars = { version = "0.34.2", features = ["lazy"] }
serde = { version = "1.0.190", features = ["derive"] }
